[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/objects/player_glitter/animated_texture.tres" type="Texture" id=1]
[ext_resource path="res://objects/generic/magic_projectile.gd" type="Script" id=2]
[ext_resource path="res://sprites/objects/magic_projectile/frame003.png" type="Texture" id=3]
[ext_resource path="res://sprites/objects/magic_projectile/frame005.png" type="Texture" id=4]
[ext_resource path="res://sprites/objects/magic_projectile/frame002.png" type="Texture" id=5]
[ext_resource path="res://sprites/objects/magic_projectile/frame006.png" type="Texture" id=6]
[ext_resource path="res://sprites/objects/magic_projectile/frame007.png" type="Texture" id=7]
[ext_resource path="res://sprites/objects/magic_projectile/frame008.png" type="Texture" id=8]
[ext_resource path="res://sprites/objects/magic_projectile/frame004.png" type="Texture" id=9]
[ext_resource path="res://sprites/objects/magic_projectile/frame001.png" type="Texture" id=10]






[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 18.6548

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 18.0
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="MagicProjectile" type="RigidBody2D"]
collision_layer = 16
mode = 2
mass = 0.0001
gravity_scale = 0.0
contacts_reported = 1
linear_damp = 0.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11.1613, 0 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 11.1613, 0 )
collision_layer = 16
collision_mask = 320

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ProjectileGlitter" type="Particles2D" parent="."]
amount = 42
lifetime = 0.4
randomness = 1.0
visibility_rect = Rect2( -400, -100, 800, 200 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
